# Overvue

./: .gitignore  LICENSE  README.md  pyproject.toml
overvue/: __init__.py  cli.py
overvue/modules/: __init__.py  clean.py  cpu.py  disk.py  net.py  procs.py  ram.py
overvue/utils/: __init__.py  display.py
